--- a/SoftwareDeveloperAssessment/Web Application/templates/display.html
+++ b/SoftwareDeveloperAssessment/Web Application/templates/display.html
@@ -3,10 +3,10 @@
 {% block content %}
 {% for row in data %}
     <div>
-        <h3>ID: {row[0]}</h3>
-        <h3>Author: {row[1]}</h3>
-        <h3>Title: {row[2]}</h3>
-        <h3>Line: {row[3]}</h3>
+        <h3>ID: {{ row[0] }}</h3>
+        <h3>Author: {{ row[1] }}</h3>
+        <h3>Title: {{ row[2] }}</h3>
+        <h3>Line: {{ row[3] }}</h3>
     </div>
 {% endfor %}
 {% endblock %}
