--- a/SoftwareDeveloperAssessment/Web Application/templates/index.html
+++ b/SoftwareDeveloperAssessment/Web Application/templates/index.html
@@ -1,6 +1,6 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% if line %}
-    <h3>Poem Line Found: {line}</h3>
+    <h3>Poem Line Found: {{ line }}</h3>
 {% endif %}
 {{ wtf.quick_form(poetry_form) }}
 {{ wtf.quick_form(poetry_req) }}
