--- a/SoftwareDeveloperApplication/client/src/App.scss
+++ b/SoftwareDeveloperApplication/client/src/App.scss
@@ -1,42 +1,74 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import "./utils/mixins.scss";
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Helvetica";
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+html {
+  background-color: rgb(31, 20, 53);
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  font-family: "Inter", sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Inter-Bold", sans-serif;
+  margin: 0px;
+  padding: 0px;
+}
+
+.page {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+}
+.page-enter {
+  opacity: 0;
+  transform: scale(1.08);
+  @include devices(tablet) {
+    transform: unset;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 300ms, transform 300ms;
+  @include devices(tablet) {
+    transform: unset;
+    transition: opacity 300ms;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+.page-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.page-exit-active {
+  opacity: 0;
+  transform: scale(0.92);
+  transition: opacity 300ms, transform 300ms;
+  @include devices(tablet) {
+    transform: unset;
+    transition: opacity 300ms;
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+a {
+  text-decoration: none;
+  transition: text-decoration-color 250ms;
+  cursor: pointer;
+  background-size: 100% 2px, 0 2px;
+  background-position: 0% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
 }
